generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  BUYER
  VENDOR
  ADMIN
}

enum VendorStatus {
  PENDING
  APPROVED
  REJECTED
  SUSPENDED
}

enum ProductStatus {
  DRAFT
  PENDING_APPROVAL
  APPROVED
  REJECTED
  ARCHIVED
}

enum OrderStatus {
  PENDING
  CONFIRMED
  PREPARING
  READY_FOR_DELIVERY
  DELIVERED
  CANCELLED
  RETURNED
}

enum PaymentMethod {
  CASH_ON_DELIVERY
}

enum PaymentStatus {
  UNPAID
  PAID
  CANCELLED
}

model User {
  id           String     @id @default(cuid())
  email        String     @unique
  passwordHash String
  fullName     String
  phone        String?
  role         Role       @default(BUYER)
  isActive     Boolean    @default(true)
  vendor       Vendor?
  cartItems    CartItem[]
  orders       Order[]    @relation("BuyerOrders")
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
}

model Vendor {
  id             String       @id @default(cuid())
  userId         String       @unique
  storeName      String
  slug           String       @unique
  description    String?
  logoUrl        String?
  status         VendorStatus @default(PENDING)
  commissionRate Decimal      @default(8.00) @db.Decimal(5, 2)
  user           User         @relation(fields: [userId], references: [id])
  products       Product[]
  orders         Order[]
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
}

model Category {
  id          String     @id @default(cuid())
  name        String
  slug        String     @unique
  description String?
  parentId    String?
  parent      Category?  @relation("CategoryTree", fields: [parentId], references: [id])
  children    Category[] @relation("CategoryTree")
  products    Product[]
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
}

model Product {
  id            String         @id @default(cuid())
  vendorId      String
  categoryId    String
  name          String
  slug          String
  description   String
  price         Decimal        @db.Decimal(10, 2)
  offerPrice    Decimal?       @db.Decimal(10, 2)
  stockQuantity Int            @default(0)
  status        ProductStatus  @default(DRAFT)
  isFeatured    Boolean        @default(false)
  isOnOffer     Boolean        @default(false)
  vendor        Vendor         @relation(fields: [vendorId], references: [id])
  category      Category       @relation(fields: [categoryId], references: [id])
  images        ProductImage[]
  cartItems     CartItem[]
  orderItems    OrderItem[]
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt

  @@unique([vendorId, slug])
  @@index([name])
  @@index([status, categoryId])
  @@index([isFeatured, isOnOffer])
}

model ProductImage {
  id        String   @id @default(cuid())
  productId String
  url       String
  altText   String?
  sortOrder Int      @default(0)
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
}

model CartItem {
  id        String   @id @default(cuid())
  userId    String
  productId String
  quantity  Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  product   Product  @relation(fields: [productId], references: [id])
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, productId])
}

model Order {
  id                   String        @id @default(cuid())
  buyerId              String
  vendorId             String
  shippingFullName     String
  shippingPhone        String
  shippingAddressLine1 String
  shippingAddressLine2 String?
  shippingCity         String
  shippingGovernorate  String
  shippingPostalCode   String?
  subtotal             Decimal       @db.Decimal(10, 2)
  deliveryFee          Decimal       @default(0.00) @db.Decimal(10, 2)
  total                Decimal       @db.Decimal(10, 2)
  status               OrderStatus   @default(PENDING)
  paymentMethod        PaymentMethod @default(CASH_ON_DELIVERY)
  paymentStatus        PaymentStatus @default(UNPAID)
  notes                String?
  buyer                User          @relation("BuyerOrders", fields: [buyerId], references: [id])
  vendor               Vendor        @relation(fields: [vendorId], references: [id])
  items                OrderItem[]
  createdAt            DateTime      @default(now())
  updatedAt            DateTime      @updatedAt

  @@index([buyerId, status])
  @@index([vendorId, status])
}

model OrderItem {
  id          String   @id @default(cuid())
  orderId     String
  productId   String
  productName String
  unitPrice   Decimal  @db.Decimal(10, 2)
  quantity    Int
  subtotal    Decimal  @db.Decimal(10, 2)
  order       Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product     Product  @relation(fields: [productId], references: [id])
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([orderId])
}

